wordpress-sevice-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  type: ClusterIP
  selector:
    app: wordpress  # must match the deployment's template labels. A Kubernetes Service doesn't talk to the Deployment itself - it talks to the Pods that the Deployment manages.
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
